# umabotools

./: AGENTS.md  CDN_INVENTORY.md  LICENSE  README.md  artemis_launch_counter.html  clubciclista.html  convert_docs.py  convert_docs.py.backup  gcal_converter.html  hello.py  image_comparison.html  index.html  index.md  photo_tagger.html  pyproject.toml  qr_generator.html  secure_secrets_gs.html  spaceinvaders.html  test_translate.html
.github/workflows/: deploy-pages.yml  python-tests.yml
assets/images/: README.md
assets/js/: clubciclista_data.js  google_translate_header.js
assets/snippets/: doc-footer.md  doc-header.md
docs/artemis_launch_counter/: README.md
docs/clubciclista/: README.md
docs/gcal_converter/: README.md
docs/image_comparison/: README.md
docs/mdproperties/: README.md
docs/photo_tagger/: README.md
docs/qr_generator/: README.md
docs/spaceinvaders/: README.md
docs/suggest_tittle/: README.md  storingSecretsSecurelyInGS.md
docs/test_translate/: README.md
docs/wp_elementor_data/: README.md
tools/SUGGEST_TITLE/: SUGGEST_TITLE.js
tools/mdproperties/: mdproperties.py  test_mdproperties.py
tools/mdproperties/test/: blog_note_test.md
tools/wordpress/: ELEMENTOR_SETUP.md  clubciclistawordpress.html  elementor_routes_csv.js  elementor_widget_html.html
